Bug 271816 - I want the cursor to change in browsing/selection mode
Summary: I want the cursor to change in browsing/selection mode
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.10.5
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-26 23:55 UTC by Aleix Pol
Modified: 2011-08-05 21:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2011-04-26 23:55:40 UTC
Version:           0.10.5 (using KDE 4.4.5) 
OS:                Linux

As described in: https://bugs.kde.org/show_bug.cgi?id=271301

The regular acrobat user expects a cursor change when the mode changes.

Reproducible: Always



Expected Results:  
A different and self-explanatory cursor for panning and selecting
Comment 1 Christopher Reichert 2011-07-13 18:06:04 UTC
I believe that this request has been fixed. In 0.12.2 when in text selection mode the cursor changes to an IBeam cursor. Please try a newer version of Okular and report in detail if the bug still persists.
Comment 2 Aleix Pol 2011-08-05 21:49:18 UTC
Git commit 390bf78eccf29e41a4c7915e256920ff2bf58b07 by Aleix Pol.
Committed on 05/08/2011 at 23:47.
Pushed by apol into branch 'master'.

Change mouse cursor when changing the current tool

Update the cursors when changing the current mode. Addresses the problems in the bug report.

- Use a opened/closed hand for browsing.
- Use cross for selection.

BUG: 271816
REVIEW: 102221

M  +7    -1    ui/pageview.cpp

http://commits.kde.org/okular/390bf78eccf29e41a4c7915e256920ff2bf58b07