Change mouse cursor when changing the current tool

Update the cursors when changing the current mode. Addresses the problems in the bug report.

- Use a opened/closed hand for browsing.
- Use cross for selection.

BUG: 271816
REVIEW: 102221